# nlp_avito

./: .gitignore  README.md  pyproject.toml
hw1/: compressed_embed.py  distillation_trainer.py  hw1_distillation.ipynb  report.md  utils.py
